--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+#container {
+	margin:20px
+}
+
+#container::before{
+	 content: "👉 Special Text (Before)";
+	font-size:20px;
+	color:#f00;
+}
+
+#container::after{
+	 content: "👉 Special Text (after)";
+	font-size:20px;
+	color:#f00;
+}
